src/snapshots/afrotd__parser__tests__rule_6.5.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 5
title: Kein Tackling
text: "Kein Spieler des Kicking Teams darf einen Gegner, der einen Fair Catch vervollständigt hat, tackeln oder blocken. Nur der Spieler, der das Fair CatchSignal gibt, hat diesen Schutz (A.R. 6.5.5.I und 6.5.5.III). Strafe: Dead Ball Foul. Ball des Receiving Teams, 15 Meter vom Succeeding Spot [S7 und S38]. Regel 7 Snappen und Werfen des Balles"
interpretations: []
