src/snapshots/afrotd__parser__tests__rule_7.1.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 2
title: Shift und Fehlstart
text: "\ta) Shift. Nach einem Huddle (Regel 2.14.1) oder einem Shift (Regel 2.22.1) und vor dem Snap müssen alle Team A-Spieler für wenigstens eine volle Sekunde zum absoluten Stillstand kommen und stationär in ihren Positionen verharren, ohne Füße, Körper, Kopf oder Arme zu bewegen, bevor der Ball gesnappt wird (A.R. 7.1.2.I).\n\tb) Fehlstart. Jede der nachfolgenden Aktionen ist ein Fehlstart durch Team A, wenn sich diese Aktionen vor dem Snap und nachdem der Ball spielbereit ist, ereignen und sich alle Spieler in einer Scrimmage Formation befinden:\n\t\t1. Jede Bewegung durch einen oder mehrerer Spieler, die eine Aktion beim Snap simuliert. Das beinhaltet die abrupte Positionsveränderung eines oder mehrerer Spieler, welche durch diese Bewegung den Start des Downs vortäuschen.\n\t\t2. Der Snapper bewegt sich zu einer anderen Position.\n\t\t3. Ein eingeschränkter Lineman (Regel 2.27.4) bewegt seine Hand / Hände oder macht irgendeine schnelle Bewegung (Ausnahmen:\n\t\t1. Es ist kein Fehlstart, wenn ein Team A-Lineman sofort reagiert, wenn er von einem Team B-Spieler in der neutralen Zone angegriffen wird (Regel 7.1.5.a.2) (A.R. 7.1.3.V); 2. Regel 7.1.3.a.3).\n\t\t4. Ein Offense Spieler, der vor dem Snap irgendeine schnelle, ruckartige Bewegung macht, was die nachfolgenden Aktionen beinhaltet, jedoch nicht darauf beschränkt ist:\n\t\t\ta. Ein Lineman, der seinen Fuß, seine Schultern, Arm, Körper oder Kopf plötzlich in irgendeine Richtung bewegt.\n\t\t\tb. Der Snapper, der den Ball schiebt, anhebt oder bewegt, seine Daumen oder Finger bewegt, seine Ellenbogen plötzlich anlegt, mit dem Kopf ruckt oder mit Schultern oder Gesäß zuckt.\n\t\t\tc. Der Quarterback, der irgendeine schnelle, plötzliche, ruckartige Bewegung macht, die den Beginn des Downs vortäuscht.\n\t\t\td. Ein Back, der durch irgendeine schnelle, plötzliche, ruckartige Bewegung die Annahme des Balles vortäuscht und damit den Beginn eines Downs vortäuscht.\n\t\t5. Das Offense Team steht, nachdem der Ball vor dem Snap spielbereit ist, nicht für mindestens eine Sekunde still (A.R. 7.1.2.IV). Das ist ein illegaler Shift, der zu einem Fehlstart umgewandelt wird."
interpretations: []
