src/snapshots/afrotd__parser__tests__rule_7.1.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 4
title: Einschränkungen der Offense – Beim Snap
text: "Jede der nachfolgenden Aktionen (a-c) sind Live Ball Fouls und das Spielgeschehen darf fortgesetzt werden:\n\ta) Formation. Beim Snap muss Team A in einer Formation sein, die folgende Bedingungen erfüllt:\n\t\t1. Alle Spieler müssen sich inbounds befinden.\n\t\t2. Alle Spieler müssen entweder Linemen oder Backs (Regel 2.27.4, A.R. 7.1.4.VIII) sein.\n\t\t3. Wenigstens fünf Linemen müssen Trikots mit einer Nummer von 50 bis 79 tragen (Ausnahme: wenn der Snap aus einer Scrimmage Kick-Formation erfolgt (Regel 7.1.4.a.5)).\n\t\t4. Nicht mehr als vier Spieler sind Backs.\n\t\t5. In einer Scrimmage Kick-Formation (Regel 2.16.10) darf Team A beim Snap weniger als fünf Spieler haben, die Trikots mit Nummern von 50 bis 79 tragen, wenn nachfolgende Bedingungen erfüllt sind:\n\t\t\ta. Jeder Lineman, der kein Trikot mit einer Nummer von 50 bis 79 trägt und durch seine Position ein unberechtigter Receiver ist, wird von der vorgeschriebenen Nummerierung ausgenommen, sobald der Snapper sich eingerichtet hat.\n\t\t\tb. Jeder von der Nummerierung ausgenommene Spieler muss sich an der Scrimmage Line befinden und darf nicht an einem Ende der Scrimmage Line stehen. Anderenfalls verursacht Team A ein Foul für eine illegale Formation.\n\t\t\tc. Jeder derartige Spieler ist während des Downs von der vorgeschriebenen Nummerierung ausgenommen und bleibt ein unberechtigter Receiver, bis er gemäß Regel 7.3.5 (Vorwärtspass berührt von einem Schiedsrichter oder einem Team BSpieler) zu einem berechtigten Receiver wird. Die Beschränkungen von 5 a) bis 5 c) treffen nicht länger zu, wenn vor dem Snap eine Periode endet oder dem Referee oder einem der Teams ein Timeout angerechnet wird.\n\tb) Spieler in Bewegung.\n\t\t1. Ein Back darf sich bewegen, aber er darf sich nicht in Richtung der gegnerischen Goalline bewegen.\n\t\t2. Der Spieler, der sich bewegt, darf nicht von seiner Scrimmage Line starten, es sei denn, er wird vorher zum Back und steht vollkommen still.\n\t\t3. Ein Spieler, der sich beim Snap bewegt, muss erst die Ein-Sekunden-Regel erfüllt haben (z. B.: Er darf seine Bewegung nicht starten, bevor irgendein Shift (Regel 2.22.1.c) beendet ist).\n\tc) Illegaler Shift. Beim Snap darf Team A keinen illegalen Shift durchführen (Regel 7.1.2.a) (A.R. 7.1.3.I bis 7.1.3.II). Strafe (a-c): Live Ball Foul. 5 Meter vom Previous Spot [S19 oder S20]. Für Live Ball Fouls, die passieren, wenn der Snap eines Scrimmage KickSpieles (Fieldgoalversuche ausgenommen) beginnt: 5 Meter vom Previous Spot oder, falls der Kick die neutrale Zone überquert, 5 Meter von dem Punkt, an dem der anschließende Dead Ball zu Team B gehört [S19 oder S20]."
interpretations: []
