src/snapshots/afrotd__parser__tests__rule_7.2.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 7
  - 2
  - 1
title: Während eines Live Balls
text: "Ein Ballträger darf einen Ball jederzeit zurückwerfen oder nach hinten übergeben, ausgenommen, er wirft den Ball absichtlich ins Aus, um Zeit einzusparen. Strafe: 5 Meter vom Spot of Foul, zusätzlich Downverlust, wenn Team A das Foul während eines Scrimmage Downs, vor dem Wechsel des Team Ballbesitzes, verursacht hat (A.R. 3.4.3.III) [S35 und S9]."
interpretations: []
